--- a/style.css
+++ b/style.css
@@ -1,7 +1,13 @@
 body {
 background-color: rgb(107,184,130);
-font-size: 20px;
 }
+
 h1 {
-	position: absolute;
+	font-size: 20px;
+	font-family: Helvetica;
+	color: white;
+}
+
+.wasteImage {
+	
 }
