added Q3 and image of seperation

--- a/style.css
+++ b/style.css
@@ -99,3 +99,28 @@ h2 {
 	font-family: Avenir;
 	font-size: 20px;
 }
+
+.trashSeperation img {
+	position: absolute;
+	margin-top: 2000px;
+	margin-left: 200px;
+	width: 50%;
+	height: auto;
+	
+}
+.Q3Header {
+	position: absolute;
+	margin-top: 2100px;
+	margin-left: 700px;
+	font-family: Avenir;
+	font-size: 30px;
+}
+
+.Q3 {
+	position: absolute;
+	margin-top: 2200px;
+	margin-left: 700px;
+	max-width: 400px;
+	font-family: Avenir;
+	font-size: 20px;
+}
