--- a/style.css
+++ b/style.css
@@ -1,8 +1,10 @@
-.homeTreeImage{
+.homeTreeImage img {
 	position: absolute;
 	margin-left: -10px;
 	margin-top: -10px;
 	z-index: -1;
+	width: 100%;
+	height: auto;
 }
 
 h1 {
@@ -141,20 +143,4 @@ h2 {
 	max-width: 400px;
 	font-family: Avenir;
 	font-size: 20px;
-
-
-
-
-
-
 }
-
-
-
-
-
-
-
-
-
-
