--- a/style.css
+++ b/style.css
@@ -1,10 +1,12 @@
+body {
+	padding: 0;
+	margin: 0;
+}
+
 .homeTreeImage {
 	position: absolute;
-	margin-left: -10px;
-	margin-top: -10px;
-	z-index: -1;
 	width: 100%;
-	height: auto;
+	height: 100vh;
 	background-image: url("homeTree.jpg");
 }
 
@@ -15,11 +17,9 @@ h1 {
 	font-size: 40px;
 	font-family: Helvetica;
 	color: white;
-	z-index: 1;
 }
 
 h2 {
-	z-index: 1;
 	color: white;
 	font-family: Helvetica;
 	font-size: 100px;
