--- a/style.css
+++ b/style.css
@@ -58,7 +58,6 @@ h2 {
 	margin-top: 1100px;
 	width: 50%;
 	height: auto;
-	margin-left: -10px;
 }
 
 .Q1Header {
@@ -83,7 +82,7 @@ h2 {
 	margin-top: 1550px;
 	width: 50%;
 	height: auto;
-	margin-left: 667px;
+	right: 0;
 }
 
 .Q2Header {
