--- a/style.css
+++ b/style.css
@@ -6,16 +6,16 @@ body {
 .homeTreeImage {
 	position: absolute;
 	width: 100%;
-	height: 100vh;
+	height: 100%;
 	background-image: url("homeTree.jpg");
 }
 
-h1 {
+.titles > h1 {
 	font-size: 40px;
 	font-family: Helvetica;
 	color: white;
 	float: left;
-	margin-top: 0px;
+	margin: 0px;
 }
 
 h2 {
@@ -25,13 +25,29 @@ h2 {
 }
 
 .titles {
+	position: absolute;
+	width: 100%;
+	height: 50px;
 }
 
-.articles {
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 60px;
+}
+
+.titles > h5 {
 	font-family: Helvetica;
 	font-size: 30px;
 	color: white;
 	float: right;
+	margin-bottom: 0;
+	margin-top: 15px;
+
 }
 
 .learn {
@@ -50,7 +66,7 @@ h2 {
 	position: absolute;
 	font-family: Avenir;
 	margin-top: 720px;
-	margin-left: 400px;
+	text-align: center;
 	font-size: 30px;
 }
 
