--- a/style.css
+++ b/style.css
@@ -5,8 +5,9 @@ body {
 
 .homeTreeImage {
 	position: absolute;
-	width: 100%;
-	height: 100%;
+    background-size:     cover;                      /* <------ */
+    background-repeat:   no-repeat;
+    background-position: center center;  
 	background-image: url("homeTree.jpg");
 }
 
