--- a/style.css
+++ b/style.css
@@ -5,9 +5,8 @@ body {
 
 .homeTreeImage {
 	position: absolute;
-    background-size:     cover;                      /* <------ */
-    background-repeat:   no-repeat;
-    background-position: center center;  
+    background-size: cover;
+    background-repeat: no-repeat;
 	background-image: url("homeTree.jpg");
 }
 
@@ -26,19 +25,13 @@ h2 {
 }
 
 .titles {
-	position: absolute;
+	position: fixed;
 	width: 100%;
 	height: 50px;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  width: 100%;
-}
-
-.sticky + .content {
-  padding-top: 60px;
+.titles1 {
+	border-bottom: 2px solid rgba(46,152,255,1)!Important;
 }
 
 .titles > h5 {
