turned the logo and the articles text into buttons

--- a/style.css
+++ b/style.css
@@ -12,11 +12,14 @@ body {
 	background-image: url("homeTree.jpg");
 }
 
-.titles > h1 {
+.titles a.logo{
 	font-size: 40px;
 	font-family: Helvetica;
 	float: left;
 	margin: 0px;
+	color: white;
+	font-weight: bold;
+	text-decoration: none;
 }
 
 h2 {
@@ -40,13 +43,16 @@ h2 {
 	z-index: 1;
 }
 
-.titles > h5 {
-	font-family: Helvetica;
+.titles a.articles {
+	color: white;
 	font-size: 30px;
 	float: right;
 	margin-bottom: 0;
 	margin-top: 10px;
 	z-index: 1;
+	font-family: Helvetica;
+	font-weight: bold;
+	text-decoration: none;
 }
 
 .learn {
