--- a/articles/style.css
+++ b/articles/style.css
@@ -36,7 +36,7 @@ body {
 	font-family: Helvetica;
 	font-weight: bold;
 	text-decoration: none;
-	color: black;
+	color: grey;
 }
 
 .titles1 a.logo {
@@ -44,7 +44,7 @@ body {
 }
 
 .titles1 a.articles {
-	color: black;
+	color: grey;
 }
 
 .showcase {
@@ -55,20 +55,14 @@ body {
 	height: calc(97% - 65px);
 }
 
-/*h1 {
-	position: absolute;
-	margin-top: 80px;
-	font-family: Helvetica;
-	font-size: 60px;
-}*/
-
-/*.grid-container {
+.grid-container {
 	margin-top: 100px;
   	display: grid;
-  	grid-template-columns: 25% 25% 25% 25%;
+  	grid-template-columns: 50% 50%;
   	font-family: Avenir;
   	text-decoration: none;
   	color: black;
+  	grid-column-gap: 50px;
 }
 
 .grid-item {
@@ -80,24 +74,19 @@ body {
 	text-decoration: none;
   	color: black;
   	font-size: 20px;
-}*/
-
-.showcaseLeft {
-	position: absolute;
-	background-color: darkgrey;
-	border-radius: 100%;
-	width: 37px;
-	height: 37px;
-	margin-top: 270px;
-	margin-left: 100px;
 }
 
-.showcaseRight {
-	position: absolute;
-	background-color: darkgrey;
-	border-radius: 100%;
-	width: 37px;
-	height: 37px;
-	margin-top: 270px;
-	right: 100px;
+.grid-item h4 {
+	text-decoration: none;
+  	color: black;
+  	font-size: 30px;
+}
+
+.grid-item p {
+	margin-right: 100px;
+	padding-right: 0px;
+}
+
+.grid-item a:hover {
+	color: grey;
 }
