--- a/style.css
+++ b/style.css
@@ -78,8 +78,8 @@ h2 {
 	position: absolute;
 	font-family: Avenir;
 	margin-top: 720px;
-	text-align: center;
 	font-size: 30px;
+	margin-left: 400px;
 }
 
 .explainer {
