--- a/articles/style.css
+++ b/articles/style.css
@@ -39,12 +39,30 @@ body {
 	color: black;
 }
 
+.titles a.act {
+	position: absolute;
+	color: black;
+	font-size: 30px;
+	right: 150px;
+	margin-bottom: 0;
+	margin-top: 5px;
+	z-index: 1;
+	font-family: Helvetica;
+	font-weight: bold;
+	text-decoration: none;
+}
+
 .titles1 a.logo {
 	color: black;
 }
 
 .titles1 a.articles {
-	color: grey;
+	color: black;
+}
+
+.titles1 a.act {
+	color: black;
+	position: fixed;
 }
 
 .grid-container {
