--- a/style.css
+++ b/style.css
@@ -54,11 +54,27 @@ h2 {
 	text-decoration: none;
 }
 
+.titles a.act {
+	color: white;
+	font-size: 30px;
+	right: 150px;
+	margin-bottom: 0;
+	margin-top: 5px;
+	z-index: 1;
+	font-family: Helvetica;
+	font-weight: bold;
+	text-decoration: none;
+}
+
 .titles1 a.logo {
 	color: black;
 }
 
 .titles1 a.articles {
+	color: black;
+}
+
+.titles1 a.act {
 	color: black;
 }
 
