--- a/act/style.css
+++ b/act/style.css
@@ -2,7 +2,7 @@ body {
 	padding: 0;
 	margin: 0;
 	z-index: -1;
-		background-color: rgb(234, 234, 234);
+	/*background-color: rgb(234, 234, 234);*/
 }
 
 .titles a.logo{
@@ -64,4 +64,27 @@ body {
 .titles1 a.act {
 	color: black;
 	position: fixed;
+}
+
+.handTrash img {
+	position: absolute;
+	float: left;
+	margin-top: 50px;
+}
+
+.ActPageHeader {
+	position: absolute;
+	font-family: Helvetica;
+	font-size: 40px;
+	left: 65%;
+	top: 60px;
+}
+
+.ActPage {
+	position: absolute;
+	font-family: Avenir;
+	max-width: 400px;
+	left: 65%;
+	top: 130px;
+	font-size: 24px
 }
