--- a/act/style.css
+++ b/act/style.css
@@ -93,7 +93,7 @@ body {
 	position: absolute;
 	color: black;
 	font-size: 130px;
-	left: 200px;
+	left: 10%;
 	margin-bottom: 0;
 	margin-top: 620px;
 	font-family: Helvetica;
@@ -105,7 +105,7 @@ body {
 	position: absolute;
 	color: black;
 	font-size: 130px;
-	right: 200px;
+	right: 15%;
 	margin-bottom: 0;
 	margin-top: 620px;
 	font-family: Helvetica;
