--- a/act/style.css
+++ b/act/style.css
@@ -27,6 +27,7 @@ body {
 .titles1 {
 	background-color: white;
 	z-index: 1;
+	border-bottom: 2px solid rgba(0, 0, 0, 1);
 }
 
 .titles a.articles {
