--- a/style.css
+++ b/style.css
@@ -43,9 +43,10 @@ h2 {
 }
 
 .titles a.articles {
+	position: absolute;
 	color: white;
 	font-size: 30px;
-	float: right;
+	right: 220px;
 	margin-bottom: 0;
 	margin-top: 5px;
 	z-index: 1;
@@ -57,7 +58,7 @@ h2 {
 .titles a.act {
 	color: white;
 	font-size: 30px;
-	right: 150px;
+	right: 0px;
 	margin-bottom: 0;
 	margin-top: 5px;
 	z-index: 1;
