--- a/act/laws/style.css
+++ b/act/laws/style.css
@@ -2,7 +2,7 @@ body {
 	padding: 0;
 	margin: 0;
 	z-index: -1;
-/*	background-color: rgb(234, 234, 234);*/
+	background-color: rgb(234, 234, 234);
 }
 
 .titles a.logo{
