--- a/act/items/style.css
+++ b/act/items/style.css
@@ -73,3 +73,84 @@ h1 {
 	color: black;
 	position: fixed;
 }
+
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
+.grid-container {
+	position: absolute;
+	top: 100px;
+  	width: 700px;
+  	height: 600px;
+  	display: grid;
+  	grid-gap: 10px;
+  	grid-template-columns: repeat(4, 80px);
+  	grid-template-rows: repeat(3, 100px);
+  	justify-content: center;
+  	align-content: end;
+}
+
+.grid-item1 {
+	border: 3px solid black;
+	grid-column: 1 / 5;
+}
+
+.grid-item2 {
+	border: 3px solid black;
+	grid-column: 1 / 3;
+ 	grid-row: 3 / 4;
+}
+
+.grid-item3 {
+	border: 3px solid black;
+	grid-column: 3 / 5;
+}
+
+.grid-item4 {
+	border: 3px solid black;
+	grid-column: 2/5;
+	grid-row: 1/3;
+}
+
+.grid-item5 {
+	border: 3px solid black;
+	align-self: center;
+  	justify-content: center;
+  	grid-area: e;
+}
+
+.grid-item6 {
+	border: 3px solid black;
+	align-self: center;
+  	justify-content: center;
+  	grid-area: f;
+}
+
+.grid-item7 {
+	border: 3px solid black;
+	align-self: center;
+  	justify-content: center;
+  	grid-area: g;
+}
+
+.grid-item8 {
+	border: 3px solid black;
+	align-self: center;
+  	justify-content: center;
+  	grid-area: h;
+}
+
+.grid-item9 {
+	border: 3px solid black;
+	align-self: center;
+  	justify-content: center;
+  	grid-area: i;
+}
+
+.grid-item10 {
+	border: 3px solid black;
+	align-self: center;
+  	justify-content: center;
+  	grid-area: j;
+}
