--- a/act/laws/style.css
+++ b/act/laws/style.css
@@ -93,8 +93,8 @@ h1 {
 }
 
 .grid-item {
-	border: 3px solid black;
-	align-self: center;
+/*	border: 3px solid black;
+*/	align-self: center;
   	justify-content: center;
 
 }
