--- a/act/items/style.css
+++ b/act/items/style.css
@@ -2,7 +2,7 @@ body {
 	padding: 0;
 	margin: 0;
 	z-index: -1;
-/*	background-color: rgb(234, 234, 234);*/
+	background-color: rgb(234, 234, 234);
 }
 
 h1 {
@@ -88,6 +88,7 @@ h1 {
 	align-self: center;
 	border: 3px solid black;
 }
+
 
 
 
