--- a/act/laws/style.css
+++ b/act/laws/style.css
@@ -84,6 +84,8 @@ h1 {
 	justify-content: center;
 	grid-column-gap: 20px;
 	grid-row-gap: 0;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .grid-item a {		
